2004-02-08 Darko Obradovic <dobradovic gmx.de>

	* src/main-window.c: fix 114041

2004-02-08  Pawel Salek

	Install as default mailer if requested by user (see bug 131606,
	closely based on the patch by Michael Petullo)
	* libinit_balsa/Makefile.am: add balsa-druid-page-defclient.[hc]

	* libinit_balsa/balsa-druid-page-{directory,finish,user,welcome}.c:
	* libinit_balsa/helper.c: remove 1.x remainings.
	* libinit_balsa/balsa-initdruid.c: plug in defuser page.
	* src/balsa-app.h: add default_client field.
	* src/main.c: update gconf data if requested.
	* src/save-restore.[hc]: implement config_defclient_save().

2004-02-07 18:08  PeterB

	* src/sendmsg-window.c: Steve Wall <balsa-user@wallfamily.us>;
	smarter choice of identity, better handling of signatures.

2004-02-07  Pawel Salek

	* libbalsa/mailbox.[hc]: do not sort/thread unless requested.
	Add persistent view filters.
	* libbalsa/mailbox_imap.c: modify accordingly.
	* libbalsa/mailbox_{local,maildir,mbox,mh}.c: ditto.
	* libbalsa/{message,send}.c: do not thread without need.
	* src/balsa-app.h: remove global view filter - do it per mailbox.
	* src/main-window.[hc]: support for per-mailbox view filters.
	* src/save-restore.c: config support for that.

	(part 2)
	* src/main-window.c: (msg) thread in (p)thread without gdk lock
	* libbalsa/mailbox.c(lbm_threads_enter): support for nested gdk locks.
	* libbalsa/mailbox_imap.c, libbalsa/imap/imap_commands.[hc]:
	obey the namespace rules.
	
2004-02-06 05:20  PeterB

	* libbalsa/mailbox_mbox.c: change parser to check for start < end
	before adding message; make sure message is terminated with '\n',
	and add one blank line before From_ line; remove dead code; remove
	Content-Length headers when armoring; pop up warnings when
	add_message fails.

2004-02-04  Pawel Salek

	* libbalsa/folder-scanners.[hc]: add IMAP error handling.
	* libbalsa/imap-server.c: show more info when certificate verify fails.
	* libbalsa/libbalsa.c: ditto.